syntax = "proto3";

option java_multiple_files = true;
//option java_package = "io.grpc.examples.helloworld";
//option java_outer_classname = "HelloWorldProto";

package protolocation;

// The greeting service definition.
service RpcGreeter {
    // Sends a greeting
    rpc rpcMethod (RpcRequest) returns (RpcResponse) {}
}

// The request message containing the user's name.
message RpcRequest {
    string requestParam = 1;
}

// The response message containing the greetings
message RpcResponse {
    string responseParam = 1;
}